fix: fix text overflow issues in photo titles

--- a/blocks/photos/__grid/photos__grid.css
+++ b/blocks/photos/__grid/photos__grid.css
@@ -2,8 +2,8 @@
 .photos__grid {
     width: calc(100% - 38px);
     display: grid;
-    grid-template-columns: 1;
-    grid-template-rows: 1;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
     gap: 20px;
     list-style-type: none;
     margin: auto;
@@ -13,7 +13,7 @@
 @media screen and (min-width: 590px){
     .photos__grid{
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(3, 1fr);
+        grid-template-rows: auto;
     }
 }
 
